--- a/client/package.json
+++ b/client/package.json
@@ -1,38 +1,42 @@
 {
-  "name": "picfixer",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "start": "concurrently \"npm run dev\" \"npm run electron\"",
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview",
-    "electron": "electron .",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "@reduxjs/toolkit": "^2.6.1",
-    "axios": "^1.8.4",
-    "lucide-react": "^0.483.0",
-    "react": "^19.1.0",
-    "react-redux": "^9.2.0",
-    "react-router-dom": "^7.4.0"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.21.0",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
-    "@vitejs/plugin-react": "^4.3.4",
-    "concurrently": "^9.1.2",
-    "electron": "^35.1.4",
-    "eslint": "^9.21.0",
-    "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^15.15.0",
-    "vite": "^6.2.0"
-  }
+    "name": "picfixer",
+    "version": "1.0.0",
+    "main": "index.js",
+    "scripts": {
+        "dev": "concurrently \"vite\" \"npm run dev:electron\"",
+        "dev:electron": "nodemon --watch index.js --watch electron --watch handers --ext js,json --exec \"electron .\"",
+        "start": "electron .",
+        "build": "vite build",
+        "preview": "vite preview",
+        "lint": "eslint .",
+        "format": "prettier --write .",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "",
+    "license": "ISC",
+    "description": "",
+    "dependencies": {
+        "@reduxjs/toolkit": "^2.6.1",
+        "axios": "^1.8.4",
+        "lucide-react": "^0.483.0",
+        "node-webcam": "^0.8.2",
+        "react": "^19.1.0",
+        "react-redux": "^9.2.0",
+        "react-router-dom": "^7.4.0"
+    },
+    "devDependencies": {
+        "@eslint/js": "^9.21.0",
+        "@types/react": "^19.0.10",
+        "@types/react-dom": "^19.0.4",
+        "@vitejs/plugin-react": "^4.3.4",
+        "concurrently": "^9.1.2",
+        "electron": "^35.1.4",
+        "eslint": "^9.21.0",
+        "eslint-plugin-react-hooks": "^5.1.0",
+        "eslint-plugin-react-refresh": "^0.4.19",
+        "globals": "^15.15.0",
+        "nodemon": "^3.1.9",
+        "prettier": "^3.5.3",
+        "vite": "^6.2.0"
+    }
 }
