--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
     "main": "index.js",
     "scripts": {
         "dev": "concurrently \"vite\" \"npm run dev:electron\"",
-        "dev:electron": "nodemon --watch index.js --watch electron --watch handers --ext js,json --exec \"electron .\"",
+        "dev:electron": "nodemon --watch index.js --watch electron --watch handers --watch src --exec \"electron .\"",
         "start": "electron .",
         "build": "vite build",
         "preview": "vite preview",
@@ -18,6 +18,7 @@
     "dependencies": {
         "@reduxjs/toolkit": "^2.6.1",
         "axios": "^1.8.4",
+        "fabric": "^5.5.2",
         "lucide-react": "^0.483.0",
         "node-webcam": "^0.8.2",
         "react": "^19.1.0",
