--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -33,6 +33,10 @@ jobs:
         working-directory: ./server
         run: php artisan key:generate
 
+      - name: Migrate test database
+        working-directory: ./server
+        run: php artisan migrate
+
       - name: Run Laravel Tests
         working-directory: ./server
         run: php artisan test
