--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -73,4 +73,13 @@ jobs:
             sudo docker-compose down
             sudo docker rmi ${{ secrets.DOCKER_USERNAME }}/picfixer_image:latest || true
             sudo docker-compose up -d
+
+            echo "⏳ Waiting for MySQL container to be ready..."
+            until sudo docker exec picfixer-app mysqladmin ping -h"picfixer-db" --silent; do
+              echo "Waiting for database connection..."
+              sleep 2
+            done
+
+            echo "✅ Database is ready. Running migrations..."
+
             sudo docker exec picfixer-app php artisan migrate --force
