--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -25,8 +25,12 @@ services:
     restart: unless-stopped
     ports:
       - "3306:3306"
-    env_file:
-      - ./server/.env
+    # env_file:
+    #   - ./server/.env
+    environment:
+      - MYSQL_ROOT_PASSWORD=12345678
+      - MYSQL_DATABASE=picfixer
+      - MYSQL_ROOT_HOST=% # This allows connections from any host
     volumes:
       - db-data:/var/lib/mysql
 
