--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,6 +16,11 @@ services:
       - LARAVEL_DATABASE_USER=root
       - LARAVEL_DATABASE_PASSWORD=12345678
       - ALLOW_EMPTY_PASSWORD=no
+      - DB_HOST=database
+      - DB_PORT=3306
+      - DB_DATABASE=picfixer
+      - DB_USERNAME=root
+      - DB_PASSWORD=12345678
     depends_on:
       - database
 
