--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,15 +12,15 @@ services:
       - LARAVEL_PROJECT_NAME=picfixer
       - LARAVEL_DATABASE_HOST=database
       - LARAVEL_DATABASE_PORT_NUMBER=3306
-      - LARAVEL_DATABASE_NAME=picfixer
+      - LARAVEL_DATABASE_NAME=picfixer_electronjs_db
       - LARAVEL_DATABASE_USER=root
       - LARAVEL_DATABASE_PASSWORD=12345678
       - ALLOW_EMPTY_PASSWORD=no
-      - DB_HOST=database
-      - DB_PORT=3306
-      - DB_DATABASE=picfixer
-      - DB_USERNAME=root
-      - DB_PASSWORD=12345678
+      # - DB_HOST=database
+      # - DB_PORT=3306
+      # - DB_DATABASE=picfixer_electronjs_db
+      # - DB_USERNAME=root
+      # - DB_PASSWORD=12345678
     depends_on:
       - database
 
@@ -34,7 +34,7 @@ services:
     #   - ./server/.env
     environment:
       - MYSQL_ROOT_PASSWORD=12345678
-      - MYSQL_DATABASE=picfixer
+      - MYSQL_DATABASE=picfixer_electronjs_db
       - MYSQL_ROOT_HOST=% # This allows connections from any host
     volumes:
       - db-data:/var/lib/mysql
