--- a/server/.env.example
+++ b/server/.env.example
@@ -21,18 +21,19 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 # Use SQLite for testing in GitHub Actions (in-memory)
-DB_CONNECTION=sqlite
-DB_DATABASE=:memory:
+# DB_CONNECTION=sqlite
+# DB_DATABASE=:memory:
 
 # Comment out or remove MySQL lines (they're not used in CI)
-# DB_HOST=database
-# DB_PORT=3306
-# DB_DATABASE=picfixer_electronjs_db
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=database
+DB_PORT=3306
+DB_DATABASE=picfixer_electronjs_db
+DB_USERNAME=
+DB_PASSWORD=
 
-# MYSQL_ROOT_PASSWORD=
-# MYSQL_DATABASE=picfixer_electronjs_db
+MYSQL_ROOT_PASSWORD=
+MYSQL_DATABASE=picfixer_electronjs_db
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
