docker-compose: switch to env_file for MySQL configuration and comment out sensitive variables

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,10 +17,11 @@ services:
     restart: unless-stopped
     ports:
       - "3306:3306"
-    environment:
-      - MYSQL_ROOT_PASSWORD=12345678
-      - MYSQL_DATABASE=picfixer_electronjs_db
-      - MYSQL_ROOT_HOST=% # This allows connections from any host
+    env_file:
+      - ./server/.env
+    # environment:
+    #   - MYSQL_ROOT_PASSWORD=placeholder_password
+    #   - MYSQL_DATABASE=placeholder_database_name
     volumes:
       - db-data:/var/lib/mysql
 
