--- a/server/.env.example
+++ b/server/.env.example
@@ -24,16 +24,16 @@ LOG_LEVEL=debug
 # DB_CONNECTION=sqlite
 # DB_DATABASE=:memory:
 
-# Comment out or remove MySQL lines (they're not used in CI)
-DB_CONNECTION=mysql
-DB_HOST=database
-DB_PORT=3306
-DB_DATABASE=picfixer_electronjs_db
+
+DB_CONNECTION=
+DB_HOST=
+DB_PORT=
+DB_DATABASE=
 DB_USERNAME=
 DB_PASSWORD=
 
 MYSQL_ROOT_PASSWORD=
-MYSQL_DATABASE=picfixer_electronjs_db
+MYSQL_DATABASE=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
