--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -10,6 +10,9 @@ jobs:
     name: Build, Test, and Push Docker Image
     runs-on: ubuntu-latest
 
+    environment:
+      name: production
+
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
@@ -48,38 +51,24 @@ jobs:
           password: ${{ secrets.DOCKER_TOKEN }}
 
       - name: Build Docker Image
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/picfixer_image:latest .
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/picfixer_server:latest .
 
       - name: Push Docker Image
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/picfixer_image:latest
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/picfixer_server:latest
 
-  deploy-to-ec2:
-    name: Deploy to EC2
-    needs: build-and-push-image
-    runs-on: ubuntu-latest
+deploy-to-Render:
+  name: deploy to Render
+  needs: [build-and-run-tests, build-and-push-docker-image]
+  runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
+  environment:
+    name: production
 
-      - name: Deploy via SSH
-        uses: appleboy/ssh-action@v0.1.10
-        with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USER }}
-          key: ${{ secrets.EC2_KEY }}
-          script: |
-            cd /home/ubuntu/picfixer
-            sudo docker-compose down
-            sudo docker rmi ${{ secrets.DOCKER_USERNAME }}/picfixer_image:latest || true
-            sudo docker-compose up -d
-
-            echo "⏳ Waiting for MySQL container to be ready..."
-            until sudo docker exec picfixer-app mysqladmin ping -h"picfixer-db" --silent; do
-              echo "Waiting for database connection..."
-              sleep 2
-            done
-
-            echo "✅ Database is ready. Running migrations..."
-
-            sudo docker exec picfixer-app php artisan migrate --force
+  steps:
+    - name: deploy
+      # Only run this step if the branch is main
+      # if: github.ref == 'refs/heads/main'
+      env:
+        deploy_url: ${{ secrets.RENDER_DEPLOY_HOOK_URL }}
+      run: |
+        curl "$deploy_url"
