--- a/client/package.json
+++ b/client/package.json
@@ -42,6 +42,7 @@
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
     "concurrently": "^9.1.2",
+    "dotenv": "^17.2.3",
     "electron": "^35.1.4",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
