ci/cd: Rename deploy workflow to Render and add pull request trigger

--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -1,7 +1,10 @@
-name: Deploy Laravel Backend to EC2
+name: Deploy Laravel Backend to Render
 
 on:
   push:
+    branches:
+      - main
+  pull_request:
     branches:
       - main
 
