--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -1,4 +1,4 @@
-# name: Deploy Laravel Backend to Render
+name: Deploy Laravel Backend to Render
 
 on:
   push:
@@ -59,19 +59,19 @@ jobs:
       - name: Push Docker Image
         run: docker push ${{ secrets.DOCKER_USERNAME }}/picfixer_server:latest
 
-deploy-to-Render:
-  name: deploy to Render
-  needs: [build-and-run-tests, build-and-push-docker-image]
-  runs-on: ubuntu-latest
+  deploy-to-Render:
+    name: deploy to Render
+    needs: [build-and-run-tests, build-and-push-docker-image]
+    runs-on: ubuntu-latest
 
-  environment:
-    name: production
+    environment:
+      name: production
 
-  steps:
-    - name: deploy
-      # Only run this step if the branch is main
-      # if: github.ref == 'refs/heads/main'
-      env:
-        deploy_url: ${{ secrets.RENDER_DEPLOY_HOOK_URL }}
-      run: |
-        curl "$deploy_url"
+    steps:
+      - name: deploy
+        # Only run this step if the branch is main
+        # if: github.ref == 'refs/heads/main'
+        env:
+          deploy_url: ${{ secrets.RENDER_DEPLOY_HOOK_URL }}
+        run: |
+          curl "$deploy_url"
