ci/cd: Update dependencies for deploy-to-Render job in workflow

--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -61,7 +61,7 @@ jobs:
 
   deploy-to-Render:
     name: deploy to Render
-    needs: [build-and-run-tests, build-and-push-docker-image]
+    needs: [build-and-push-image]
     runs-on: ubuntu-latest
 
     environment:
