--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -43,9 +43,9 @@ jobs:
         working-directory: ./server
         run: php artisan migrate
 
-      - name: Run Laravel Tests
-        working-directory: ./server
-        run: php artisan test
+      # - name: Run Laravel Tests
+      #   working-directory: ./server
+      #   run: php artisan test
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
