ci/cd: Comment out database migration step in deploy-backend.yml

--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -39,9 +39,9 @@ jobs:
         working-directory: ./server
         run: php artisan key:generate
 
-      - name: Migrate test database
-        working-directory: ./server
-        run: php artisan migrate
+      # - name: Migrate test database
+      #   working-directory: ./server
+      #   run: php artisan migrate
 
       # - name: Run Laravel Tests
       #   working-directory: ./server
