frontend: update package.json and package-lock.json with new dependencies and author information

--- a/client/package.json
+++ b/client/package.json
@@ -1,55 +1,57 @@
 {
-  "name": "picfixer",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "dev": "concurrently \"vite\" \"npm run dev:electron\"",
-    "dev:electron": "nodemon --watch index.js --watch electron --watch handers --watch src --exec \"electron .\"",
-    "start": "electron-forge start",
-    "build": "vite build",
-    "preview": "vite preview",
-    "lint": "eslint .",
-    "format": "prettier --write .",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "package": "electron-forge package",
-    "make": "electron-forge make"
-  },
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "@reduxjs/toolkit": "^2.6.1",
-    "axios": "^1.8.4",
-    "electron-squirrel-startup": "^1.0.1",
-    "fabric": "^5.5.2",
-    "lucide-react": "^0.483.0",
-    "node-webcam": "^0.8.2",
-    "react": "^19.1.0",
-    "react-redux": "^9.2.0",
-    "react-router-dom": "^7.4.0"
-  },
-  "devDependencies": {
-    "@electron-forge/cli": "^7.9.0",
-    "@electron-forge/maker-deb": "^7.9.0",
-    "@electron-forge/maker-rpm": "^7.9.0",
-    "@electron-forge/maker-squirrel": "^7.9.0",
-    "@electron-forge/maker-zip": "^7.9.0",
-    "@electron-forge/plugin-auto-unpack-natives": "^7.9.0",
-    "@electron-forge/plugin-fuses": "^7.9.0",
-    "@electron/fuses": "^1.8.0",
-    "@eslint/js": "^9.21.0",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
-    "@vitejs/plugin-react": "^4.3.4",
-    "concurrently": "^9.1.2",
-    "dotenv": "^17.2.3",
-    "electron": "^35.1.4",
-    "eslint": "^9.21.0",
-    "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^15.15.0",
-    "nodemon": "^3.1.9",
-    "prettier": "^3.5.3",
-    "vite": "^6.2.0"
-  }
+    "name": "picfixer",
+    "version": "1.0.0",
+    "main": "index.js",
+    "scripts": {
+        "dev": "concurrently \"vite\" \"npm run dev:electron\"",
+        "dev:electron": "nodemon --watch index.js --watch electron --watch handers --watch src --exec \"electron .\"",
+        "start": "electron-forge start",
+        "build": "vite build",
+        "preview": "vite preview",
+        "lint": "eslint .",
+        "format": "prettier --write .",
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "package": "electron-forge package",
+        "make": "electron-forge make"
+    },
+    "description": "A powerful desktop image editing application built with React, Electron, and Laravel",
+    "author": {
+        "name": "Hassan Abou khalil"
+    },
+    "license": "ISC",
+    "dependencies": {
+        "@reduxjs/toolkit": "^2.6.1",
+        "axios": "^1.8.4",
+        "dotenv": "^17.2.3",
+        "electron-squirrel-startup": "^1.0.1",
+        "fabric": "^5.5.2",
+        "lucide-react": "^0.483.0",
+        "node-webcam": "^0.8.2",
+        "react": "^19.1.0",
+        "react-redux": "^9.2.0",
+        "react-router-dom": "^7.4.0"
+    },
+    "devDependencies": {
+        "@electron-forge/cli": "^7.9.0",
+        "@electron-forge/maker-deb": "^7.9.0",
+        "@electron-forge/maker-rpm": "^7.9.0",
+        "@electron-forge/maker-squirrel": "^7.9.0",
+        "@electron-forge/maker-zip": "^7.9.0",
+        "@electron-forge/plugin-auto-unpack-natives": "^7.9.0",
+        "@electron-forge/plugin-fuses": "^7.9.0",
+        "@electron/fuses": "^1.8.0",
+        "@eslint/js": "^9.21.0",
+        "@types/react": "^19.0.10",
+        "@types/react-dom": "^19.0.4",
+        "@vitejs/plugin-react": "^4.3.4",
+        "concurrently": "^9.1.2",
+        "electron": "^35.1.4",
+        "eslint": "^9.21.0",
+        "eslint-plugin-react-hooks": "^5.1.0",
+        "eslint-plugin-react-refresh": "^0.4.19",
+        "globals": "^15.15.0",
+        "nodemon": "^3.1.9",
+        "prettier": "^3.5.3",
+        "vite": "^6.2.0"
+    }
 }
